--- a/pkgs/development/compilers/dotnet/10/release-info.json
+++ b/pkgs/development/compilers/dotnet/10/release-info.json
@@ -1,5 +1,5 @@
 {
-  "tarballHash": "sha256-ysEYGRk3TQYf9z5+WMyfelSArLDI3C4wnFvYRCF/eWI=",
-  "artifactsUrl": "https://builds.dotnet.microsoft.com/dotnet/source-build/Private.SourceBuilt.Artifacts.10.0.100-rtm.25523.111.centos.10-x64.tar.gz",
-  "artifactsHash": "sha256-O+SrYQ2HirwJCS2w/kR1Pqx84/zRFZeIVlqTtWeoFgU="
+  "tarballHash": "sha256-zFRPNX42dPP00XDIL3gfb5QGdg6Lrb4fvK8EZX4VVNQ=",
+  "artifactsUrl": "https://builds.dotnet.microsoft.com/dotnet/source-build/Private.SourceBuilt.Artifacts.10.0.101-servicing.25569.105.centos.10-x64.tar.gz",
+  "artifactsHash": "sha256-lVf2cu7N65kA40y2kl0KZ88Aam+aXF9L/nroExn1fKQ="
 }
