--- a/pkgs/development/compilers/dotnet/10/release.json
+++ b/pkgs/development/compilers/dotnet/10/release.json
@@ -1,11 +1,11 @@
 {
-  "release": "10.0.1",
+  "release": "10.0.2",
   "channel": "10.0",
-  "tag": "v10.0.101",
-  "sdkVersion": "10.0.101",
-  "runtimeVersion": "10.0.1",
-  "aspNetCoreVersion": "10.0.1",
+  "tag": "v10.0.102-sb1",
+  "sdkVersion": "10.0.102",
+  "runtimeVersion": "10.0.2",
+  "aspNetCoreVersion": "10.0.2",
   "sourceRepository": "https://github.com/dotnet/dotnet",
-  "sourceVersion": "fad253f51b461736dfd3cd9c15977bb7493becef",
-  "officialBuildId": "20251119.5"
+  "sourceVersion": "1def04f336cc452f7633f2ef1f157669c37c283a",
+  "officialBuildId": "20260105.8"
 }
