.editorconfig: don't force final newline for JSON
JSON is often automatically generated and adding a final newline is a
manual step, that we shouldn't enforce.

--- a/.editorconfig
+++ b/.editorconfig
@@ -64,6 +64,9 @@ insert_final_newline = unset
 end_of_line = unset
 trim_trailing_whitespace = unset
 
+[*.json]
+insert_final_newline = unset
+
 [*.lock]
 indent_size = unset
 
